// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskTile should match the snapshot for grouped task 1`] = `
<DocumentFragment>
  <div
    class="tile-parent-container"
  >
    <div
      class="nursing-tasks-tile false
        "
    >
      <div
        class="tile-content"
      >
        <div
          class="tile-title undefined"
        >
          <div>
            <div
              class="nursing-task-icon-container"
              data-testid="Late"
            >
              <div>
                <test-file-stub />
              </div>
            </div>
            <span
              class="bx--tooltip--definition bx--tooltip--a11y cursor-pointer"
            >
              <button
                aria-describedby="definition-tooltip-2"
                class="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
                type="button"
              >
                <div
                  class="drug-title"
                  style="color: rgb(82, 82, 82); font-weight: 400;"
                >
                  Paracetamol 120 mg/5 mL Suspension (Liquid)
                </div>
              </button>
              <span
                class="bx--assistive-text"
                id="definition-tooltip-2"
                role="tooltip"
              >
                Paracetamol 120 mg/5 mL Suspension (Liquid)
              </span>
            </span>
          </div>
          <div
            class="tile-name-cell"
          />
        </div>
        <div
          class="tile-content-subtext"
          style="color: rgb(82, 82, 82); padding-left: 25px;"
        >
          <span>
            25
          </span>
          <span>
             - mg
          </span>
          <span>
             - Oral
          </span>
        </div>
        <div
          class="tile-content-footer"
        >
          <div
            class="tile-date-time"
          >
            <test-file-stub />
            <div
              class="tile-content-subtext-time"
            >
               16:15
            </div>
             
          </div>
          <div>
            (1 more)
          </div>
        </div>
      </div>
    </div>
    <div
      class="nursing-tasks-tile stacked-tile false"
    />
  </div>
</DocumentFragment>
`;

exports[`TaskTile should match the snapshot for non grouped task 1`] = `
<DocumentFragment>
  <div
    class="tile-parent-container"
  >
    <div
      class="nursing-tasks-tile false
        disabled-tile"
    >
      <div
        class="tile-content"
      >
        <div
          class="tile-title undefined"
        >
          <div>
            <div
              class="nursing-task-icon-container"
              data-testid="Administered"
            >
              <div>
                <test-file-stub />
              </div>
            </div>
            <span
              class="bx--tooltip--definition bx--tooltip--a11y cursor-not-allowed"
            >
              <button
                aria-describedby="definition-tooltip-1"
                class="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
                type="button"
              >
                <div
                  class="drug-title"
                  style="color: rgb(82, 82, 82); font-weight: 400;"
                >
                  Halothane/Fluothane 250 mL Inhalation Anesthetic Liquid
                </div>
              </button>
              <span
                class="bx--assistive-text"
                id="definition-tooltip-1"
                role="tooltip"
              >
                Halothane/Fluothane 250 mL Inhalation Anesthetic Liquid
              </span>
            </span>
          </div>
          <div
            class="tile-name-cell"
          />
        </div>
        <div
          class="tile-content-subtext"
          style="color: rgb(82, 82, 82); padding-left: 25px;"
        >
          <span>
            1ml
          </span>
          <span>
             - Oral
          </span>
        </div>
        <div
          class="tile-content-footer"
        >
          <div
            class="tile-date-time"
          >
            <test-file-stub />
            <div
              class="tile-content-subtext-time"
            >
               16:00 - 07:23 (actual)
            </div>
             
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
